<resources>
    <string name="app_name">RepositorySys</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="button_main_package_get">package get</string>
    <string name="button_main_package_input">package input</string>
    <string name="button_main_package_output">package output</string>
    <string name="button_main_item_output">item output</string>
    <string name="button_main_package_signature">package signature</string>
    <string name="button_main_user">self information</string>

    <string name="button_next">next</string>
    <string name="button_prev">prev</string>
    <string name="button_ok">ok</string>
    <string name="button_cancel">cancel</string>

    <string name="title_item_code">item code</string>
    <string name="title_label_code">label code</string>
    <string name="title_domain_code">domain code</string>
    <string name="title_domain_name">domain name</string>
    <string name="title_car_no">car no</string>

    <string name="title_awb_no">awb no</string>
    <string name="title_awb_sum">awb sum</string>

    <string name="title_package_barcode">package barcode</string>
    <string name="title_package_sum">package sum</string>
    <string name="title_item_barcode">item barcode</string>
    <string name="title_destination">destination</string>

    <string name="title_signature">signature</string>
    <string name="title_pay">pay</string>
    <string name="title_pay_other">pay other</string>

    <string name="title_self_username">user name</string>
    <string name="title_self_ename">ename</string>
    <string name="title_self_cname">cname</string>
    <string name="title_self_orgname">org name</string>
    <string name="title_self_tel">tel phone</string>
    <string name="title_self_mphone">mobile phone</string>


    <string name="title_self_logout">logout</string>

    <string name="tips_request_success">success!</string>
    <string name="tips_request_failed">failed!</string>

    <string name="tips_login_success">login success!</string>
    <string name="tips_login_failed">login failed!</string>

    <string name="tips_hint_barcodes">enter [Enter] to start another item </string>

    <string name="menu_package_input_setting">package input setting</string>
    <string name="menu_package_output_setting">package output setting</string>
    <string name="menu_item_output_setting">item output setting</string>

    <string name="title_remember_domain_setting">Remember settings ?</string>

    <string name="error_invalid_domain_code">Invalid domain code</string>
    <string name="error_invalid_setting">Invalid setting</string>
    <string name="error_invalid_car_no">Invalid car no</string>

    <string name="error_invalid_item_code">Invalid item code</string>
    <string name="error_invalid_label_code">Invalid label code</string>

    <string name="error_invalid_awbno">Invalid awbno</string>
    <string name="error_invalid_awbsum">Invalid awbsum</string>

    <string name="error_invalid_barcode">Invalid barcode</string>
    <string name="error_invalid_sum">Invalid sum</string>
    <string name="error_invalid_dest">Invalid dest</string>

</resources>
