<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <include layout="@layout/ok_button"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">


        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:text="@string/title_item_code"
            android:textSize="@dimen/title_text_size_02"/>

        <EditText
            android:id="@+id/package_get_item_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="@dimen/title_text_size_02"/>


        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label_code"
            android:textSize="@dimen/title_text_size_02"/>

        <EditText
            android:id="@+id/package_get_label_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="200dp"
            android:hint="@string/tips_hint_barcodes"
            android:inputType="textMultiLine"
            android:textSize="@dimen/title_text_size_02"/>

    </LinearLayout>
</FrameLayout>